# CPPCourse

./: CMakeLists.txt  README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp  bind.h  c.cmd  cmp.cmd  mul.asm  optimized_vector.cpp  optimized_vector.h  persistent_set.cpp  persistent_set.h  sub.asm
ASM_Homework1/: sub.asm
Practice1/examples/: debug_list.cpp  debug_list.h  deque.cpp  deque.h  deque_.cpp  deque_.h
Practice1/list/: iterator_invalid.txt  list.cpp  list.h
Practice1/list_new_try/: list.h
Practice1/persistent_set_OK_Version/: README.md
Practice1/persistent_set_Shared_ptr/: persistent_set.cpp  persistent_set.h
Practice1/persistent_set_Version1/: CMakeLists.txt  persistent_set.cpp  persistent_set.h
Practice1/persistent_set_Version2/: persistent_set.cpp  persistent_set.h
Practice2/: any-testing.cpp  any.h  err
big_int_Homework2/: CMakeLists.txt  README.md  big_integer.cpp  big_integer_testing.cpp  c.cmd
big_int_Homework2/HomeWork_2/: big_integer.cpp
big_int_Homework2/test/: test_add.cpp  test_vector.cpp
big_int_Homework2/test/sanitize/: c.cmd
big_int_opt_vector_Homework3/: CMakeLists.txt  big_integer.cpp  optimized_vector.h
big_int_opt_vector_Homework3/second_try/: big_integer.cpp
bind/: bind-testing.cpp  bind.h
first_try/: big_integer.cpp  big_integer.h
second_try/: big_integer.h
template/: CMakeLists.txt  main.cpp
template_Extra_practice/: template_for_num_type.cpp
